--- a/login navigation/Base.lproj/Main.storyboard
+++ b/login navigation/Base.lproj/Main.storyboard
@@ -187,7 +187,7 @@
                                     <action selector="next:" destination="Hyb-Vi-bT3" eventType="touchUpInside" id="LPE-I2-iCx"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Welcome" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OjP-lJ-BWG">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Welcome to the lobby" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OjP-lJ-BWG">
                                 <rect key="frame" x="34" y="105" width="191" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
